--- a/color_flipper/index.html
+++ b/color_flipper/index.html
@@ -27,7 +27,7 @@
         <h2>Background color : <span class="color">
           #f1f5f8
         </span></h2>
-        <button class="btn btn_hero" id="btn">Click</button>
+        <button class="btn btn-hero" id="btn">Click</button>
       </div>
     </main>
     <!-- javascript -->
