--- a/JS_Drumkit/index-START.html
+++ b/JS_Drumkit/index-START.html
@@ -66,7 +66,16 @@
     if(!audio) return; // stops the function from running
     audio.currentTime = 0; // rewinds audio to the start
     audio.play();
+    key.classList.add('playing');
   });
+
+function removeTransition(e) {
+  if (e.propertyName !== 'transition') return; // skip if it's not a transform
+  this.classList.remove('playing');
+}
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
 </script>
 </body>
 </html>
